[package]
name = "ps2-interface"
version = "0.1.0"
authors = ["funnyboy-roks <funnyboyroks@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "ps2-interface"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = { version = "0.5.1", features = ["atmega328p"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
strip = true

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
strip = true
